--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -67,6 +67,8 @@ body {
   color: #212529;
   text-align: left;
   background-color: #fff;
+  font-family: "Glyphicons Halflings";
+  font-family: "FontAwesome";
 }
 
 [tabindex="-1"]:focus {
@@ -8972,4 +8974,44 @@ a.text-dark:hover, a.text-dark:focus {
     border: 1px solid #ddd !important;
   }
 }
+@font-face {
+  font-family: 'Glyphicons Halflings';
+
+  src: url('../fonts/glyphicons-halflings-regular.eot');
+  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'),
+       url('../fonts/glyphicons-halflings-regular.woff') format('woff'),
+       url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'),
+       url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+
+}
+@font-face {
+  font-family: 'FontAwesome';
+ src: url('../fonts/fontawesome-webfont.eot');
+ src: url('../fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
+      url('../fonts/fontawesome-webfont.woff') format('woff'),
+      url('../fonts/fontawesome-webfont.ttf') format('ttf'),
+      url('../fonts/fontawesome-webfont.ttf') format('truetype'),
+      url('../fonts/fontawesome-webfont.svg#fontawesomeregular') format('svg');
+ font-weight: normal;
+ font-style: normal;
+}
+
+/*
+
+
+@font-face {
+  font-family: 'FontAwesome';
+src:	url('../fonts/fontawesome-webfont.eot');
+src:	url('../fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/fontawesome-webfont.woff2') format('woff2'),
+	url('../fonts/fontawesome-webfont.woff') format('woff'),
+	url('../fonts/fontawesome-webfont.ttf?') format('truetype'),
+	url('../fonts/fontawesome-webfont.svg?v=4.3.0#fontawesomeregular') format('svg');
+font-weight: normal;
+font-style: normal;
+} */
+
+
+
 /*# sourceMappingURL=bootstrap.css.map */
