--- a/app/views/posts/_about_1.html.erb
+++ b/app/views/posts/_about_1.html.erb
@@ -18,31 +18,35 @@
 
         <title>:: avana LLC | About ::</title>
 
-		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+		<!-- <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"> -->
 
 
 
         <!-- style -->
 
-        <link href="css/style.css" rel="stylesheet" type="text/css">
+        <link href="/style.css" rel="stylesheets" type="text/css">
 
         <!-- style -->
 
         <!-- bootstrap -->
 
-        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <link href="/bootstrap.min.css" rel="stylesheets" type="text/css">
 
         <!-- responsive -->
 
-        <link href="css/responsive.css" rel="stylesheet" type="text/css">
+        <link href="/responsive.css" rel="stylesheets" type="text/css">
 
         <!-- font-awesome -->
 
-        <link href="css/fonts.css" rel="stylesheet" type="text/css">
+        <link href="font-awesome.min.css" rel="stylesheets" type="text/css">
+        <link href="/fonts" rel="stylesheets" type="text/css">
 
-        <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
 
         <!-- font-awesome -->
+
+
+       <link href="/bootstrap.min.css" rel="javascripts" type="text/css">
 
 
 
@@ -335,21 +339,31 @@
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 
-        <script src="js/jquery.min.js" type="text/javascript"></script>
+        <script src="js/jquery.min.js" type="text/javascripts"></script>
 
         <!-- custom -->
 
-		<script src="js/nav.js" type="text/javascript"></script>
+		<script src="js/nav.js" type="text/javascripts"></script>
 
-        <script src="js/custom.js" type="text/javascript"></script>
+        <script src="js/custom.js" type="text/javascripts"></script>
 
         <!-- Include all compiled plugins (below), or include individual files as needed -->
 
-        <script src="js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="js/bootstrap.min.js" type="text/javascripts"></script>
 
         <!-- jquery.countdown -->
 
-        <script src="js/html5shiv.js" type="text/javascript"></script>
+        <script src="js/html5shiv.js" type="text/javascripts"></script>
+
+
+
+
+        <script src="fonts/glyphicons-halflings-regular.woff2" type="text/assets"></script>
+        <script src="fonts/fontawesome-webfont.woff2" type="text/assets"></script>
+        <script src="fonts/fontawesome-webfont.woff" type="text/assets"></script>
+        <script src="fonts/glyphicons-halflings-regular.woff" type="text/assets"></script>
+        <script src="fonts/fontawesome-webfont.ttf" type="text/assets"></script>
+        <script src="fonts/glyphicons-halflings-regular.ttf" type="text/assets"></script>
 
     </body>
 
