--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -13,10 +13,11 @@
     <title>Phote Gallery - Start Bootstrap Template</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/bootstrap.min.css" rel="stylesheets">
 
     <!-- Custom styles for this template -->
-    <link href="css/thumbnail-gallery.css" rel="stylesheet">
+    <link href="css/thumbnail-gallery.css" rel="stylesheets">
+    <link href="font-awesome.min.css" rel="stylesheets"/>
 
   </head>
 
