--- a/app/views/posts/video.html.erb
+++ b/app/views/posts/video.html.erb
@@ -11,10 +11,10 @@
     <title>Phote Gallery - Start Bootstrap Template</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheets">
 
     <!-- Custom styles for this template -->
-    <link href="css/thumbnail-gallery.css" rel="stylesheet">
+    <link href="css/thumbnail-gallery.css" rel="stylesheets">
 
   </head>
 
@@ -150,9 +150,13 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
 
+
+
+    <script src="js/jquery.min.js" type="text/javascripts"></script>
+    <script src="js/bootstrap.bundle.min.js" type="text/javascripts"></script>
   </body>
 
 </html>
