--- a/app/views/posts/datashowvideo.html.erb
+++ b/app/views/posts/datashowvideo.html.erb
@@ -11,10 +11,10 @@
     <title>Portfolio Item - Start Bootstrap Template</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheets">
 
     <!-- Custom styles for this template -->
-    <link href="css/portfolio-item.css" rel="stylesheet">
+    <link href="css/portfolio-item.css" rel="stylesheets">
 
   </head>
 
@@ -131,8 +131,11 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
+
+    <script src="js/jquery.min.js" type="text/javascripts"></script>
+    <script src="js/bootstrap.bundle.min.js" type="text/javascripts"></script>
 
   </body>
 
